<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/moment"
            android:icon="@drawable/ic_action_icon3"
            android:title="@string/moments" />
        <item
            android:id="@+id/messageSection"
            android:icon="@drawable/ic_action_icon4"
            android:title="@string/message" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/aristocracy"
            android:icon="@drawable/ic_action_icon5"
            android:title="@string/Aristocracy__" />

        <item
            android:id="@+id/recharge"
            android:icon="@drawable/ic_action_icon6"
            android:title="@string/rechrage" />

        <item
            android:id="@+id/store"
            android:icon="@drawable/ic_action_icon7"
            android:title="@string/store" />

        <item
            android:id="@+id/earn_gold"
            android:icon="@drawable/ic_action_icon8"
            android:title="@string/earn_gold" />

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_action_icon5"
            android:title="@string/faq" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_action_icon9"
            android:title="@string/settings" />
    </group>

</menu>
