<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_members"
        android:orderInCategory="100"
        android:title="@string/members"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_themes"
        android:orderInCategory="100"
        android:title="@string/themes__"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_develop"
        android:orderInCategory="100"
        android:title="@string/develop"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lock"
        android:orderInCategory="100"
        android:title="@string/lock"
        app:showAsAction="never" />
    <item

        android:id="@+id/action_mute"
        android:orderInCategory="100"
        android:title="@string/mute"
        app:showAsAction="never" />

</menu>
