<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gnusl.wow.Views.FontedTextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-thin"
        android:text="@string/or"
        android:textColor="@color/no_moments_label_text_color"
        android:textSize="12sp"
        android:textStyle="bold"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typefaceAsset="fonts/SFUIText-Regular.ttf" />

    <com.gnusl.wow.Views.FontedTextView
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/signup_backround_button_shape"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/register__"
        android:textColor="@drawable/signup_button_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typefaceAsset="fonts/SFUIText-Regular.ttf" />

    <com.gnusl.wow.Views.FontedTextView
        android:id="@+id/Login_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/login_backround_button_shape"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/no_moments_image_tint_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typefaceAsset="fonts/SFUIText-Regular.ttf" />

</android.support.constraint.ConstraintLayout>