<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:minHeight="40dp"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:inputType="textMultiLine|textShortMessage"
            android:textColor="@color/room_item_content_text_color"
            android:textColorHint="@color/room_item_content_text_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_seperator_color"
            app:layout_constraintTop_toBottomOf="@id/password"/>

        <com.gnusl.wow.Views.FontedTextView
            android:id="@+id/save_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/signup_backround_button_shape"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/Ok"
            android:textColor="@drawable/signup_button_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:typefaceAsset="fonts/SFUIText-Regular.ttf" />

        <com.gnusl.wow.Views.FontedTextView
            android:id="@+id/cancel_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/signup_backround_button_shape"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textColor="@drawable/signup_button_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/save_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:typefaceAsset="fonts/SFUIText-Regular.ttf" />


    </android.support.constraint.ConstraintLayout>

</RelativeLayout>